2009-11-28  Zoltan Herczeg  <zherczeg@inf.u-szeged.hu>

Reviewed by Gavin Barraclough.

        https://bugs.webkit.org/show_bug.cgi?id=31930

        Seems a typo. We don't need ~270k memory to determine the vptrs.

        * runtime/JSGlobalData.cpp:
        (JSC::VPtrSet::VPtrSet):


Canonical link: https://commits.webkit.org/42886@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51457 268f45cc-cd09-0410-ab3c-d52691b4dbfc